cartservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cartservice
  namespace: onlineboutique
spec:
  clusterIP: 10.112.14.88
  clusterIPs:
  - 10.112.14.88
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 7070
    protocol: TCP
    targetPort: 7070
  selector:
    app: cartservice
  sessionAffinity: None
  type: ClusterIP
