service-adservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: adservice
  namespace: onlineboutique
spec:
  clusterIP: 10.8.0.2
  clusterIPs:
  - 10.8.0.2
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: grpc
    port: 9555
    protocol: TCP
    targetPort: 9555
  selector:
    app: adservice
  sessionAffinity: None
  type: ClusterIP
