service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    config.k8s.io/owning-inventory: onlineboutique_repo-sync
    config.kubernetes.io/origin: |
      path: kustomize/base/frontend.yaml
      repo: https://github.com/GoogleCloudPlatform/microservices-demo
      ref: main
    configmanagement.gke.io/cluster-name: asm-acm-tutorial
    configmanagement.gke.io/managed: enabled
    configmanagement.gke.io/source-path: asm-acm-tutorial/online-boutique/deployments/v1_service_frontend.yaml
    configmanagement.gke.io/token: 1fbab5c90af9029b26451fec92e9900d8db23aee
    configsync.gke.io/declared-fields: '{"f:metadata":{"f:annotations":{"f:config.kubernetes.io/origin":{}},"f:labels":{}},"f:spec":{"f:ports":{"k:{\"port\":80,\"protocol\":\"TCP\"}":{".":{},"f:name":{},"f:port":{},"f:protocol":{},"f:targetPort":{}}},"f:selector":{},"f:type":{}}}'
    configsync.gke.io/git-context: '{"repo":"https://github.com/GoogleCloudPlatform/anthos-config-management-samples","branch":"main","rev":"HEAD"}'
    configsync.gke.io/manager: onlineboutique
    configsync.gke.io/resource-id: _service_onlineboutique_frontend
  creationTimestamp: "2022-12-14T19:04:02Z"
  labels:
    app.kubernetes.io/managed-by: configmanagement.gke.io
    configsync.gke.io/declared-version: v1
  name: frontend
  namespace: onlineboutique
  resourceVersion: "26197858"
  uid: 3e140cdd-2f05-47a5-9959-4a1381b529bb
spec:
  clusterIP: 10.112.3.152
  clusterIPs:
  - 10.112.3.152
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: frontend
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
